# RAG-System

./: .env.example  README.md  docker-compose.yml  pyproject.toml
apps/api/: deps.py  main.py
apps/api/routes/: __init__.py  audit.py  chat.py  documents.py  feedback.py
apps/web/: README.md
apps/worker/: celery_app.py
apps/worker/tasks/: indexing.py
configs/chunking/: default.yaml
configs/prompts/: system.yaml
docs/: architecture.md  compliance.md
eval/: golden_qa.json  run.py
infra/docker/: Dockerfile
scripts/: dev-up.sh
tests/: test_api.py
